# AppImageLauncher

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: main.yml  update-docker-images.yml
ci/: .dockerignore  Dockerfile  Dockerfile.bionic-arm64  Dockerfile.bionic-armhf  Dockerfile.bionic-i386  Dockerfile.bionic-i386-lite  Dockerfile.bionic-x86_64  Dockerfile.bionic-x86_64-lite  Dockerfile.focal-arm64  Dockerfile.focal-armhf  Dockerfile.focal-i386  Dockerfile.focal-i386-lite  Dockerfile.focal-x86_64  Dockerfile.focal-x86_64-lite  Dockerfile.xenial-arm64  Dockerfile.xenial-armhf  Dockerfile.xenial-i386  Dockerfile.xenial-x86_64  build-docker-image.sh  build-in-docker.sh  build-lite.sh  build.sh  install-deps.sh
cmake/: cpack_deb.cmake  cpack_general.cmake  cpack_rpm.cmake  cpack_source.cmake  install.cmake  reproducible_builds.cmake  scripts.cmake  versioning.cmake
cmake/debian/: postinst  postrm.in  prerm  prerm.in
cmake/modules/: FindFUSE.cmake  FindINotify.cmake
cmake/rpm/: post-install  post-install.in  pre-uninstall  pre-uninstall.in
cmake/toolchains/: i386-linux-gnu.cmake
i18n/: CMakeLists.txt  auto-translate.py  desktopfiles.ast.json  desktopfiles.cs.json  desktopfiles.de.json  desktopfiles.en.json  desktopfiles.es_MX.json  desktopfiles.fr.json  desktopfiles.it.json  desktopfiles.ja_JP.json  desktopfiles.ko.json  desktopfiles.nb_NO.json  desktopfiles.nl.json  desktopfiles.pl.json  desktopfiles.pt.json  desktopfiles.pt_PT.json  desktopfiles.ru.json  desktopfiles.sv.json  desktopfiles.tr.json  desktopfiles.zh_Hans.json  desktopfiles.zh_TW.json  main.de.ts  main.en.ts  main.ts  remove.en.ts  remove.ts  shared.en.ts  shared.ts  ui.ast.ts  ui.cs.ts  ui.de.ts  ui.en.ts  ui.es.ts  ui.fr.ts  ui.it.ts  ui.ja_JP.ts  ui.ko.ts  ui.nb_NO.ts  ui.nl.ts  ui.pl.ts  (+11 more)
lib/: CMakeLists.txt
resources/: AppImageLauncher.1.in  AppImageLauncher.desktop  CMakeLists.txt  ail-cli.desktop  appimagelauncher-lite-AppRun.sh  appimagelauncher-lite-installer-common.sh  appimagelauncher-lite.desktop  appimagelauncher.desktop  appimagelauncherd.desktop  appimagelauncherd.service.in  appimagelauncherd_openrc.in  appimagelauncherfs.service.in  appimagelaunchersettings.desktop  resources.qrc
resources/binfmt.d/: appimage.conf.in  appimagelauncher.conf.in
resources/doc/: PKGBUILD
resources/fallback-icons/: .gitignore
resources/icons/: generate-icons.sh
resources/icons/fallback/: index.theme
resources/install-scripts/: post-install.in  post-uninstall.in
resources/mime/application/: appimage.xml
src/: AppImageDesktopIntegrationManager.cpp  AppImageDesktopIntegrationManager.h  AppImageLauncherConfig.cpp  AppImageLauncherConfig.h  AppImageLauncherException.h  CMakeLists.txt  daemon_main.cpp  daemon_worker.cpp  filesystemwatcher.cpp  filesystemwatcher.h  main.cpp  remove_main.cpp  shared.cpp  shared.h  translationmanager.cpp  translationmanager.h  trashbin.cpp  trashbin.h  update_main.cpp
src/binfmt-bypass/: CMakeLists.txt  bypass_main.cpp  elf.cpp  elf.h  fix-preload-library.sh  interpreter_main.cpp  lib.cpp  lib.h  logging.h  main.cpp  preload.c
src/cli/: CMakeLists.txt  cli_main.cpp
src/cli/commands/: CMakeLists.txt  Command.h  CommandFactory.cpp  CommandFactory.h  IntegrateCommand.cpp  IntegrateCommand.h  UnintegrateCommand.cpp  UnintegrateCommand.h  WouldIntegrateCommand.cpp  WouldIntegrateCommand.h  exceptions.h
src/cli/logging/: CMakeLists.txt  logging.h
src/daemon/: CMakeLists.txt  daemon.cpp  daemon.h  daemon_worker.cpp  daemon_worker.h  filesystemwatcher.cpp  filesystemwatcher.h  main.cpp  worker.cpp  worker.h
src/dbus/: CMakeLists.txt  DBusClient.cpp  DBusClient.h  DBusServer.cpp  DBusServer.h  dbus_exceptions.cpp  dbus_exceptions.h
src/fswatcher/: CMakeLists.txt  filesystemwatcher.cpp  filesystemwatcher.h
src/fusefs/: CMakeLists.txt  error.h  fs.cpp  fs.h  main.cpp
src/i18n/: CMakeLists.txt  translationmanager.cpp  translationmanager.h
src/launcher/: AppImageDesktopIntegrationManager.cpp  AppImageDesktopIntegrationManager.h  AppImageLauncherConfig.cpp  AppImageLauncherConfig.h  CMakeLists.txt  Launcher.cpp  Launcher.h  main.cpp  ui.cpp  ui.h  ui.ui
src/shared/: CMakeLists.txt  shared.cpp  shared.h  types.cpp  types.h
src/trashbin/: CMakeLists.txt  trashbin.cpp  trashbin.h
src/ui/: CMakeLists.txt  first-run.cpp  first-run.h  first-run.ui  integration_dialog.cpp  integration_dialog.h  integration_dialog.ui  main.cpp  remove.ui  remove_main.cpp  resources.qrc  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui  settings_main.cpp  update.ui  update_main.cpp  update_spinner.qml
travis/: Dockerfile.build-bionic  Dockerfile.build-bionic-arm64  Dockerfile.build-bionic-armhf-cross  Dockerfile.build-bionic-i386-cross  Dockerfile.build-bionic-lite  Dockerfile.build-bionic-lite-i386-cross  Dockerfile.build-buster  Dockerfile.build-buster-i386-cross  Dockerfile.build-cosmic  Dockerfile.build-cosmic-i386-cross  Dockerfile.build-disco  Dockerfile.build-disco-i386-cross  Dockerfile.build-eoan  Dockerfile.build-eoan-i386-cross  Dockerfile.build-xenial  Dockerfile.build-xenial-armhf-cross  Dockerfile.build-xenial-i386-cross  Dockerfile.build-xenial-lite  Dockerfile.build-xenial-lite-i386-cross  build-lite.sh  travis-bionic.sh  travis-build.sh  travis-cosmic.sh  travis-docker.sh
